--- a/分布式锁.md
+++ b/分布式锁.md
@@ -128,6 +128,10 @@ Curator不仅封装了Zookeeper的常用API，也包装了很多常用Case的实
     }
 
 代码参考实例git：distributedLock.CuratorZookeeperLock   (git地址文章最后) 
-基于Zookeeper实现分布式锁，其实是不常用的。虽然它实现锁十分优雅，但编程复杂，同时还要单独维护一套Zookeeper集群，频繁的Watch对Zookeeper集群的压力还是蛮大的，如果不是原有的项目以来Zookeeper，同时锁的量级比较小的话，还是不用为妙。
+基于Zookeeper实现分布式锁，其实是不常用的。虽然它实现锁十分优雅，但编程复杂，同时还要单独维护一套Zookeeper集群，频繁的Watch对Zookeeper集群的压力还是蛮大的，如果不是原有的项目以来Zookeeper，同时锁的量级比较小的话，还是不用为妙。    
+
+参考阅读    
+1、https://www.ibm.com/developerworks/cn/opensource/os-cn-apache-zookeeper-watcher/
+
 
 参考git地址  https://github.com/Sonion/JavaDemo.git   
